LP2089597 Contrast issues in login form buttons
Several accessibility corrections to the Angular staff login form:
* Loads the dark mode toggle and sets color mode when not logged in
* Corrects background and border of the password visibility toggle
* Moves password visually-hidden message outside the input group to
  ensure that the input-group-text is the last child of the group and
  gets the correct border radius

Release-note: Fixes borders of staff login form button, password toggle

--- a/Open-ILS/src/eg2/src/styles-colors.css
+++ b/Open-ILS/src/eg2/src/styles-colors.css
@@ -193,6 +193,9 @@
   --success-border: #00593d;
   --success-hover: #157146; 
   --success-disabled: #448768; /* desaturated */
+  --bs-tertiary-bg: var(--bs-body-bg-highlight);
+  --bs-border-color: var(--border);
+
   --success-disabled-rgb: 68, 135, 104;
   --success-text-light: #dff0d8;
   --success-text-light-rgb: 223, 240, 216;
